--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,6 +21,9 @@
       ],
       "@fluentui-contrib/nx-plugin": ["packages/nx-plugin/src/index.ts"],
       "@fluentui-contrib/react-chat": ["packages/react-chat/src/index.ts"],
+      "@fluentui-contrib/react-css-layout": [
+        "packages/react-css-layout/src/index.ts"
+      ],
       "@fluentui-contrib/react-data-grid-react-window": [
         "packages/react-data-grid-react-window/src/index.ts"
       ],
